<resources>
    <string name="app_name">Doctor Appointment</string>
    <string name="login_button_text">Login</string>
    <string name="register_button_text">Register</string>
    <string name="login_title">Login</string>
    <string name="login_mail_hint_text">Mail</string>
    <string name="login_password_hint_text">Password</string>
    <string name="login_forgot_password_text">Forgot Password?</string>
    <string name="login_account_question_text">Don\'t have an account?</string>
    <string name="login_sign_up_button_text">Sign Up</string>
    <string name="register_title">Register</string>
    <string name="register_full_name_hint_text">Full Name</string>
    <string name="register_re_password_hint_text">Re-Password</string>
    <string name="register_sign_up_button_text">Sign Up</string>
    <string name="home_user_profile_button_text">User Profile</string>

    <string name="cardiology">Cardiology</string>
    <string name="neurology">Neurology</string>
    <string name="dentist">Dentist</string>
    <string name="orthopedic">Orthopedic</string>
    <string name="doctor_detail_about_title">About</string>

    <string name="mail_empty">This field must not empty</string>
    <string name="mail_contains_check">Email must contain @ and .</string>

    <string name="home">Home</string>
    <string name="doctor">Doctor</string>
    <string name="hospital">Hospital</string>
    <string name="profile">Profile</string>
    <string name="upcoming_appointments">Upcoming Appointments</string>
    <string name="past_appointments">Past Appointments</string>

    <string name="this_field_is_required">This field is required.</string>
    <string name="identifier_is_too_short">Identifier is too short.</string>
    <string name="email_is_invalid">Email is invalid</string>
    <string name="username_is_required">Username is required.</string>
    <string name="username_is_too_short">Username is too short.</string>
    <string name="username_is_too_long">Username is too long.</string>
    <string name="username_not_consist">Username can only include a-z, 0-9 and _ characters</string>
    <string name="password_is_too_long">Password is too long</string>
    <string name="password_is_too_short">Password is too short</string>
    <string name="password_contain_check">Password must contain one digit, one uppercase letter, one lowercase letter and one special character.</string>
    <string name="password_required">Password is required</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>