<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        />

    <item
        android:id="@+id/doctorSearchFragment"
        android:enabled="true"
        android:icon="@drawable/ic_health"
        android:title="@string/doctor" />

    <item
        android:id="@+id/hospitalListFragment"
        android:enabled="true"
        android:icon="@drawable/ic_hospital"
        android:title="@string/hospital"
        />

    <item
        android:id="@+id/profileFragment"
        android:enabled="true"
        android:icon="@drawable/ic_person"
        android:title="@string/profile"
        />

</menu>